src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@import url('https://fonts.googleapis.com/css2?family=Rufina:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');


:root {
  --font-family: 'Lato', sans-serif;
  --font-family-head: 'Rufina', serif;

  
  --color-bg: #dbd6d0;
  --color-text: #050505;
  --color-text-light: #fff;
  --color-subtext: #FF8A71;
  --color-btn-text: #fff;
  --color-btn-bg: #2c3511;
}


h1,h2,h3,h4,h5,.font-heading {
  font-family: 'Rufina', serif;
}

body {
  font-family: 'Lato', sans-serif;
  background-color: var(--color-bg);
}


.btn{
  border: 2px solid var(--color-btn-bg);
  background-color: var(--color-btn-bg);
  padding: 0.5rem 2rem;

  font-family: var(--font-family-head);
  font-weight: 700;
  color: var(--color-text-light);
}

.btn-trans{
  background-color: transparent;
  color: var(--color-btn-bg);
}


.section__padding{
  padding: 1rem;
}



/* Tablet */

@media (min-width: 768px){
  .section__padding{
    padding: 2rem;
  }
}

